<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <Button
        android:id="@+id/button_scan"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/title_scan" />

    <LinearLayout
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent" >
    </LinearLayout>

    <TextView
        android:text="@string/setting_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textSize="25dip" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/setting_scan_documentsize"
            android:layout_marginBottom="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/setting_scan_documentsize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#aaa"
                android:textSize="25dip" />

            <TextView
                android:text="@string/setting_scan_documentsize_default"
                android:id="@+id/setting_scan_documentsize_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20dip" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting_scan_color"
            android:layout_marginBottom="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:text="@string/setting_scan_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#aaa"
                android:textSize="25dip" />

            <TextView
                android:text="@string/setting_scan_color_default"
                android:id="@+id/setting_scan_color_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20dip" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting_scan_duplex"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:text="@string/setting_scan_duplex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#aaa"
                android:textSize="25dip" />

            <TextView
                android:text="@string/setting_scan_duplex_default"
                android:id="@+id/setting_scan_duplex_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>