<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:gravity="left|center_vertical"
                android:id="@+id/ipaddresstitle"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:text="@string/ip_title" />

            <TextView
                android:gravity="right|center_vertical"
                android:id="@+id/ipaddress"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:text="@string/ip_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/engine_type"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/engine_name" />
    </LinearLayout>

    <LinearLayout
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent" >
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <Button
            android:enabled="false"
            android:id="@+id/button_startdiscovery"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:text="@string/str_startdiscovery"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_stopdiscovery"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:text="@string/str_stopdiscovery"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <ListView
        android:focusable="true"
        android:id="@+id/device_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

</LinearLayout>